hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - hw1.kflix.tv
    - k8s-dashboard.kflix.tv
    secretName: hello-kubernetes-tls
  rules:
  - host: "hw1.kflix.tv"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
  - host: "k8s-dashboard.kflix.tv"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: k8s-dashboard
            port:
              number: 8080
